# pineapple-assoc-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows.yml
app/: association_manager.cpp  association_manager.h  default-assoc.pacfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/: pineapple-assoc-manager.rc.in
assets/icons/: README.md
docs/: DESIGN.zh_CN.md  PACFG_SPEC.md  PACFG_SPEC.zh_CH.md
translations/: pineapple-assoc-manager_ca.ts  pineapple-assoc-manager_de.ts  pineapple-assoc-manager_en.ts  pineapple-assoc-manager_es.ts  pineapple-assoc-manager_fr.ts  pineapple-assoc-manager_id.ts  pineapple-assoc-manager_it.ts  pineapple-assoc-manager_ja.ts  pineapple-assoc-manager_ko.ts  pineapple-assoc-manager_nb_NO.ts  pineapple-assoc-manager_nl.ts  pineapple-assoc-manager_pa_PK.ts  pineapple-assoc-manager_ru.ts  pineapple-assoc-manager_si.ts  pineapple-assoc-manager_sl.ts  pineapple-assoc-manager_ta.ts  pineapple-assoc-manager_tr.ts  pineapple-assoc-manager_uk.ts  pineapple-assoc-manager_vi.ts  pineapple-assoc-manager_zh_CN.ts
